fetch projectItem from target directory

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.konbluesky.javadesignpatternhelperideaplugin
+pluginGroup = com.github.konbluesky.jdph
 pluginName = java-design-pattern-helper-idea-plugin
 pluginVersion = 0.0.1
 
